<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">







    <item
        android:id="@+id/wlmovedlg"
        android:icon="@drawable/ic_perem"
        android:orderInCategory="100"
        android:title="@string/mm5"
        app:showAsAction="never" />

    <item
        android:id="@+id/doc"
        android:icon="@drawable/ic_perem"
        android:orderInCategory="100"
        android:title="@string/rer1"
        app:showAsAction="never" />
    <item
        android:id="@+id/ima"
        android:icon="@drawable/ic_perem"
        android:orderInCategory="100"
        android:title="@string/rer2"
        app:showAsAction="never" />

    <item
        android:id="@+id/all"
        android:icon="@drawable/ic_perem"
        android:orderInCategory="100"
        android:title="@string/rer3"
        app:showAsAction="never" />




</menu>
