<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/alf1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:hint="@string/alf2" />

        <TextView
            android:id="@+id/ttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/vkl"
            android:layout_toRightOf="@+id/tdate"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:hint="@string/alf3" />

        <Switch
            android:id="@+id/vkl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="2" />
    </RelativeLayout>
</LinearLayout>