<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:id="@+id/scc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ssc2"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/alfrag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:ems="7"
                android:gravity="top"
                android:hint="@string/edl1"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:padding="8dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:typeface="monospace" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ssc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/alf1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:hint="@string/alf2" />

            <TextView
                android:id="@+id/ttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/vkl"
                android:layout_toRightOf="@+id/tdate"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:hint="@string/alf3" />

            <Switch
                android:id="@+id/vkl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="2" />
        </RelativeLayout>
    </LinearLayout>






</RelativeLayout>